--- a/src/components/tagsCategorias/style.css
+++ b/src/components/tagsCategorias/style.css
@@ -5,5 +5,58 @@
     align-items: center;
     gap: 0.375rem;
     border-radius: 62.4375rem;
+    
+}
+
+h3 {
+   font-family: Inter;
+   font-size: 0.75rem;
+   font-weight: 600;
+   line-height: 130%; /* 0.975rem */
+}
+.fruta {
     background: #261A17;
+}
+
+.fruta h3 {
+   color: #E07B67;
+}
+
+.padaria{
+   background: #211E12;
+}
+
+.padaria h3 {
+   color: #BB9F3A;
+}
+
+.legume{
+    background-color: #1C2015;
+}
+
+.legume h3{
+    color:#8CAD51;
+}
+
+.bebida{
+    background-color: #1A1D23;
+}
+
+.bebida h3 {
+    color:#7B94CB;
+}
+
+.carne {
+    background-color:#251622;
+}
+
+.carne h3 {
+    color: #DB5BBF;
+}
+.outra{
+    background: #5e5656;
+}
+
+.outra h3 {
+    color: white;
 }
