--- a/src/components/card/style.css
+++ b/src/components/card/style.css
@@ -14,6 +14,11 @@
   cursor: pointer;
 }
 
+.finish {
+  transition: linear 0.5s;
+  opacity: 0.7;
+}
+
 .container {
   display: flex;
   gap: 2rem;
